add endpoint of timeline
