# backend/openapi/generated/openapi.yaml
@@ -229,6 +229,36 @@ paths:
       responses:
         '204':
           description: 'There is no content to send for this request, but the headers may be useful. '
+  /api/v1/post/timeline:
+    get:
+      tags:
+        - Timeline
+      operationId: FetchTimeline
+      parameters:
+        - name: kind
+          in: query
+          required: true
+          schema:
+            type: string
+        - name: prevCursor
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: nextCursor
+          in: query
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Api.v1.Post'
   /api/v1/signin:
     post:
       tags:
